--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vue-equipment doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Pathfinder Equipment Search doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
